<package>
  <name>industrial_io_client</name>
  <version>0.0.0</version>
  <description>Industrial io client</description>

  <maintainer email="fzi@fzi.de">FZI Karlsruhe</maintainer>
  <license>BSD License</license>
  <url type="website"></url>
  <author>FZI Karlsruhe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>simple_message</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>industrial_utils</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>simple_message</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>industrial_utils</run_depend>
</package>
